kube/v1/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: tracker-ingress
  annotations:
    name: tracker-ingress
    type: ingress
spec:
  rules:
    - host: tracker-app.com
      http:
        paths:
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port: 
                  number: 80
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts-service
                port:
                  number: 80
